# mx-hd_indi

./: CMakeLists.txt  README.md  UPSTREAM_NOTES.md  indi_mxhd_telescope.xml.in
doc/: index.md
src/: mxhd_serial.cpp  mxhd_serial.h  mxhd_telescope.cpp  mxhd_telescope.h
